# agent-extensions

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  gemini-extension.json  pyproject.toml
.changes/: 0.2.0.md  0.2.1.md  0.3.0.md  0.3.1.md
.changes/unreleased/: Added-20260408-changie-release.yaml  Added-20260419-102256.yaml  Added-20260419-changie-fragment-lint-hook.yaml  Changed-20260408-sync-release-tag.yaml  Changed-20260416-sync-skills-v030.yaml  Changed-20260417-sync-skills-v031.yaml  Fixed-20260417-sync-skills-v031.yaml
.claude-plugin/: marketplace.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.githooks/: post-checkout  post-merge
.github/: dependabot.yml
.github/workflows/: build-mcp-servers.yml  build-pi-server.yml  docs.yml  release.yml  sync-skills.yml  validate.yml
docs/: ARCHITECTURE.md  DEPLOYMENT_PHASES.md  bundles.md  claude.md  gemini-cli.md  pidev.md
gemini/: GEMINI.md
gemini/skills/: canvas-design  cc-hooks  changie  dispatch  document-release  gemini-cli  go-secure  jules-dispatch-creator  quarto-authoring  r-expert  r-lib-cli  r-lib-cli-app  r-lib-package-dev  r-lib-testing  shiny-bslib  starrocks  tdd-team-workflow  writerside
hooks/: changie-fragment-lint.json  changie-fragment-lint.sh  forced-eval-hook.sh
mcp/: .gitignore  README.md
mcp/gemini-cli/: package.json  tsconfig.json
mcp/gemini-cli-go/: Makefile  go.mod
mcp/pi-rpc-go/: Makefile  go.mod
pidev/: package.json
scripts/: bump-release-version.sh  validate-plugin-hooks.sh
(+130 files in other folders)
