[project]
authors = [{name = "Rudolf J", email = "r.schnetler@uq.edu.au"}]
dependencies = []
name = "agent-extensions"
requires-python = ">= 3.11"
version = "0.3.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
# pixi is optional — used for the docs environment on linux-64 only.
# Install uv (recommended) or pixi to work on docs/. Not required for skills or MCP servers.

[tool.pixi.tasks]

[tool.pixi.dependencies]
zensical = ">=0.0.31,<0.0.32"
